# verilog-coding-template

./: .gitignore  .hud_eval.toml  CONTRACTOR_GUIDE.md  Dockerfile  QUICK_START.md  README.md  pyproject.toml
src/hud_controller/: app.py  graders.py  grading_runner.py  spec.py
src/hud_controller/extractors/: basic_tasks.py
src/hud_controller/problems/: basic.py
src/hud_controller/tools/: apply_patch.py  bash.py  shell.py
utils/: imagectl3.py
